# MultiCloudSRE-Ops

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.env.example  config.json  deploy.sh  pyproject.toml  server.py  uninstall.sh
.github/workflows/: ci.yml
docker/: hermes-runtime.Dockerfile
docs/: architecture.md  case-format.md  deployment.md  frontend-build.md  release.md  security.md
faults/: lib.sh
faults/clock-skew-payment-signature/: case.json  ideal-answer.json  (+3 more)
kubeconfigs/: README.md
manifests/: namespaces.yaml
oj/: README.md
oj_platform/: __init__.py  cases.py  db.py  faults.py  grader_config.py  grading.py  grading_api.py  hermes_docker.py  hermes_runner.py  hermes_setup.py  hermes_transcript.py  http_app.py  mcp.py  model_config.py  processes.py  prompts.py  security.py  settings.py  skills.py  soul.py  submissions.py  textutil.py  timeutil.py  users.py  worker.py
scripts/: 01-check-prerequisites.sh  02-check-servers.sh  03-install-k3s.sh  04-import-base-images.sh  04-install-chaos-mesh.sh  04a-import-base-images.sh  04b-install-chaos-mesh.sh  05-import-images.sh  06-render-manifests.sh  07-deploy-services.sh  08-deploy-questions.sh  08-generate-access.sh  09-health-check.sh  10-deploy-oj.sh  build-static-app.js  check-frontend-modules.js  lib.sh  package-hermes-image.sh  package-image-artifacts.sh  remote-generate-access.sh
static/: app.js  index.html  styles.css
systemd/: oj-platform.service
tests/: test_open_source_hygiene.py  test_opsctl_realism.py  test_platform_features.py
(+109 files in other folders)
